Fix videos on mobile

--- a/alchemy/static/css/style_extra.css
+++ b/alchemy/static/css/style_extra.css
@@ -14,4 +14,5 @@ figure video {
     display:block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
